# file-meta

./: .gitignore  Cargo.toml  README.md
src/: coll.rs  db.rs  delete.rs  drop.rs  dump.rs  file.rs  fs.rs  get.rs  init.rs  logging.rs  main.rs  move.rs  open.rs  path.rs  rename.rs  set.rs  tags.rs  time.rs
src/coll/: create.rs  delete.rs  pop.rs  push.rs  update.rs  view.rs
src/db/: drop.rs  dump.rs  init.rs
src/file/: tags.rs
