[package]
name = "fsm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"
bincode = "1"
anyhow = "1"

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.opener]
version = "0.6"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.url]
version = "2"
features = ["serde"]

[dependencies.log]
version = "0.4"

[dependencies.env_logger]
version = "0.11"
